<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">App</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_exit">Exit</string>

    <string name="Przycisk_strona_glowna">Strona Główna</string>
    <string name="Przycisk_oceny">Oceny</string>
    <string name="Przycisk_informacje">Informacje</string>
    <string name="Przycisk_zamknij">Zamknij</string>

    <string name="Textview_przykładowa_nazwa_uzytkownika">John Doe</string>
    <string name="Textview_tekst_powitalny">Witaj,</string>
    <string name="Textview_tekst_login">Zalogowano!</string>
    
    <string name="Textview_imie">Imię</string>
    <string name="Textview_nazwisko">Nazwisko</string>
    <string name="Textview_nick">Nick</string>
    <string name="Textview_klasa">Klasa</string>
</resources>