<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center_vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/button_hamburger_menu"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/baseline_menu_black_48" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:ignore="MissingConstraints"
        android:animateLayoutChanges="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp"
                    android:layout_marginEnd="10dp">

                    <ImageView
                        android:id="@+id/ImageView_nav_user_image"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/example_user_icon"
                        android:layout_gravity="center_vertical" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif"
                        android:text="@string/Textview_tekst_powitalny"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/TextView_nav_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif"
                        android:text="@string/Textview_przykładowa_nazwa_uzytkownika"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/Button_nav_homepage"
            android:text="@string/Przycisk_strona_glowna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/Button_nav_marks"
            android:text="@string/Przycisk_oceny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/Button_nav_user_info"
            android:text="@string/Przycisk_informacje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/Button_nav_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Przycisk_zamknij" />


    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:id="@+id/Login_Form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scaleX="1.2"
            android:scaleY="1.2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textview_nick"/>
            <EditText
                android:id="@+id/Input_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textview_imie"/>
            <EditText
                android:id="@+id/Input_imie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textview_nazwisko"/>
            <EditText
                android:id="@+id/Input_nazwisko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textview_klasa"/>
            <EditText
                android:id="@+id/Input_klasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
            <Button
                android:id="@+id/Button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Zaloguj"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>