<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Informacje_o_uzytkowniku">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nickname"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Klasa"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <TextView
        android:id="@+id/Textview_userinfo_imie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="przykladowe imie"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <TextView
        android:id="@+id/Textview_userinfo_klasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Przykladowa klasa"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.839" />

    <TextView
        android:id="@+id/Textview_userinfo_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Przykładowy nick"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nazwisko"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Imie"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/Textview_userinfo_nazwisko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Przykladowe nazwisko"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center_vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/button_hamburger_menu"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/baseline_menu_black_48"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/Textview_Toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Textview_przykładowa_nazwa_uzytkownika"
            android:fontFamily="sans-serif"
            android:textSize="18sp"/>
    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:ignore="MissingConstraints"
        android:animateLayoutChanges="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp"
                    android:layout_marginEnd="10dp">

                    <ImageView
                        android:id="@+id/ImageView_nav_user_image"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/example_user_icon"
                        android:layout_gravity="center_vertical" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif"
                        android:text="@string/Textview_tekst_powitalny"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/TextView_nav_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif"
                        android:text="@string/Textview_przykładowa_nazwa_uzytkownika"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/Button_nav_homepage"
            android:text="@string/Przycisk_strona_glowna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/Button_nav_marks"
            android:text="@string/Przycisk_oceny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/Button_nav_user_info"
            android:text="@string/Przycisk_informacje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/Button_nav_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Przycisk_zamknij" />


    </com.google.android.material.navigation.NavigationView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="151dp"
        android:layout_height="134dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147"
        app:srcCompat="@drawable/example_user_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>